k8s/app/deployment-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myntra
spec:
  replicas: 4
  selector:
    matchLabels:
      app: myntra
  template:
    metadata:
      labels:
        app: myntra
    spec:
      containers:
        - name: myntra
          image: 025910518584.dkr.ecr.ap-south-1.amazonaws.com/myntra:latest

          ports:
            - containerPort: 80
