k8s/app/svc.yml
apiVersion: v1
kind: Service
metadata:
  name: myntra-service
spec:
  type: ClusterIP
  selector:
    app: myntra
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
