k8s/app/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myntra-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/subnets: subnet-042eaedc5541e0c0e,subnet-0d31299791c1229b8
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb   
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: myntra-service
                port:
                  number: 80
